--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,3 +28,11 @@ body
 {
     font-size: 16px;
 }
+#footer
+{
+    background-color: coral;
+    text-align: center;
+    color: beige;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 2px;
+}
